NIFI-15367: Bug fixes; review feedback